[package]
name = "example-lunatic-submillisecond"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build]
target = "wasm32-wasi"

[target.wasm32-wasi]
runner = "lunatic"

[dependencies]
serde = { version = "1.0.152", features = ["derive"] }
submillisecond = "0.2.0-alpha0"
